--- a/ComeniusCarrousel/Leerling/Keuze.cshtml
+++ b/ComeniusCarrousel/Leerling/Keuze.cshtml
@@ -48,7 +48,7 @@
         // Het aantal mensen voor elk keuzevak.
         int[] aantalMensen = new int[4] {Convert.ToInt16(Request.Form["aantalMensen_0"]), Convert.ToInt16(Request.Form["aantalMensen_1"]),
                                             Convert.ToInt16(Request.Form["aantalMensen_2"]), Convert.ToInt16(Request.Form["aantalMensen_3"])};
-        // Mail van de verzorger/ouder.
+        // Mail van de ouder/verzorger.
         string mailVerzorger = Request.Form["mailVerzorger"];
 
         if(Validation.IsValid())
