--- a/ComeniusCarrousel/Leerling/_LeerlingDetails.cshtml
+++ b/ComeniusCarrousel/Leerling/_LeerlingDetails.cshtml
@@ -53,7 +53,7 @@
                 <td>@leerling.UserName</td>
             </tr>
             <tr>
-                <td>E-Mail Verzorger:</td>
+                <td>E-Mail Ouder/Verzorger:</td>
                 <td>@leerling.MailVerzorger</td>
             </tr>
             <tr>
