--- a/ComeniusCarrousel/_Layout.cshtml
+++ b/ComeniusCarrousel/_Layout.cshtml
@@ -88,7 +88,7 @@
                 </div>
                 <div id="floatRight">
                     <a href="~/" style="color: #fff;">
-                        <span class="glyphicon glyphicon-home" style="color:#fff"></span>&nbsp; Main&nbsp;
+                        <span class="glyphicon glyphicon-home" style="color:#fff"></span>&nbsp; Home&nbsp;
                     </a>
                     @if(WebSecurity.IsAuthenticated)
                     {
