Progressbar Afgemaakt (met kleurtjes afhankelijk van de percentage) & css & .dll spul (??)

--- a/ComeniusCarrousel/css/mainstyle.css
+++ b/ComeniusCarrousel/css/mainstyle.css
@@ -325,6 +325,10 @@ a:focus {
     color: #5bc0de;
 }
 
+.progress {
+    border-radius: 3px;
+}
+
 /*.head { background-color: #969696; font-weight: bold; color: #FFF; }
 .grid th, .grid td { border: 1px solid #C0C0C0; padding: 5px; }
 .alt { background-color: #E8E8E8; color: #000; }
