--- a/ComeniusCarrousel/Decaan/Mail/OntvangersToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/OntvangersToevoegen.cshtml
@@ -43,37 +43,50 @@
         if (Request.Form["klas"] != "-")
         {
             klas = Request.Form["klas"];
+
+            if (Validation.IsValid())
+            {
+                MailOntvangerRepo.InsertMailOntvanger(mailId, klasId:klas);
+            }
         }
         if (Request.Form["user"] != "-")
         {
             user = Request.Form["user"];
+
+            if (Validation.IsValid())
+            {
+                MailOntvangerRepo.InsertMailOntvanger(mailId, userId:user);
+            }
         }
         if (Request.Form["niveau"] != "-")
         {
             niveau = Request.Form["niveau"];
+
+            if (Validation.IsValid())
+            {
+                MailOntvangerRepo.InsertMailOntvanger(mailId, niveau:niveau);
+            }
         }
         if (Request.Form["role"] != "-")
         {
             role = Request.Form["role"];
+
+            if (Validation.IsValid())
+            {
+                MailOntvangerRepo.InsertMailOntvanger(mailId, roleId:role);
+            }
         }
         if (Request.Form["aangemeld"] != "-")
         {
             aangemeld = Request.Form["aangemeld"];
-        }
 
-        if (!(klas == "" && user == "" && niveau == "" && role == "" && aangemeld == ""))
-        {
             if (Validation.IsValid())
             {
-                MailOntvangerRepo.InsertMailOntvanger(mailId, aangemeld, niveau, klas, role, user);
-                Response.Redirect(string.Format("~/Decaan/Mail/MailVerzenden?MailId={0}", mailId));
+                MailOntvangerRepo.InsertMailOntvanger(mailId, aangemeld:aangemeld);
             }
         }
-        else
-        {
-            Validation.AddFormError("Geef minimaal 1 ontvanger op om toe te voegen.");
-        }
-        
+
+        Response.Redirect(string.Format("~/Decaan/Mail/MailVerzenden?MailId={0}", mailId));
     }
 }
 @Html.ValidationSummary()
