--- a/ComeniusCarrousel/_AboutDetails.cshtml
+++ b/ComeniusCarrousel/_AboutDetails.cshtml
@@ -8,6 +8,8 @@
     
 }
 
+<h2>CSG Comenius</h2>
+
 <p> CSG Comenius vindt het van groot belang dat haar studenten goed voorbereid en met groot vertrouwen de toekomst tegemoet zullen gaan.
     Het Vakkencarrousel is ontstaan uit deze denkwijze en wordt ingezet ter impressie van vakken die nieuw zullen zijn voor aanstaande bovenbouw leerlingen.
     Uiteraard zal dit niet huidige talentontwikkelingen in de weg staan. Wij zullen middels mail goed contact houden hoe jouw status met betrekking tot deze fantastische 
