Mail Send Stuff, layout mail

--- a/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailOverzicht.cshtml
@@ -44,7 +44,7 @@
         {
         <tr>
             <td>@mail.Onderwerp</td>
-            <td><a href="~/Decaan/Mail/MailVerzenden?MailId=@mail.MailId">Verzenden</a></td>
+            <td><a href="~/Decaan/Mail/MailVerzenden?MailId=@mail.MailId">Verzenden/Wijzigen</a></td>
         </tr>
         }
     </tbody>
