Nav in header FIEKS

--- a/ComeniusCarrousel/css/mainstyle.css
+++ b/ComeniusCarrousel/css/mainstyle.css
@@ -112,7 +112,7 @@ a:focus {
     width: 1000px;
     margin-top: 4%;
     margin-bottom: 100px;
-    text-align: justify;
+    text-align: left;
     padding-bottom: 15px;
     padding-top: 15px;
 }
