--- a/ComeniusCarrousel/_Layout.cshtml
+++ b/ComeniusCarrousel/_Layout.cshtml
@@ -82,10 +82,13 @@
     <body style="font-size: 16px;">
         <div class="page-header">
             <div class="container">
+                <div class="row">
                 <div id="floatLeft">
                     <img src="~/Logo Comenius SVG Grayscale.svg" alt="Comenius Logo" style="width: 320px; margin-top: 24px;" />
                 </div>
-                <div id="floatRight">
+                    </div>
+                <div class="row" style="width: 100%">
+                <div id="floatRight" style="white-space: nowrap;">
                     <a href="~/" style="color: #fff;">
                         <span class="glyphicon glyphicon-home" style="color:#fff"></span>&nbsp; Home&nbsp;
                     </a>
@@ -105,6 +108,7 @@ else
                         </a>
                     }
                 </div>
+                    </div>
             </div>
         </div>
         </div>
