--- a/ComeniusCarrousel/_AppStart.cshtml
+++ b/ComeniusCarrousel/_AppStart.cshtml
@@ -18,12 +18,12 @@
     db.Execute("DELETE FROM .. WHERE ..")*/;
 
     // Initialize WebMail helper
-    WebMail.SmtpServer = "127.0.0.1";
+    WebMail.SmtpServer = "ex2013.csg-comenius.nl";
     WebMail.SmtpPort = 25;
-    WebMail.UserName = "Sev7n";
+    WebMail.UserName = "Comenius-profielkeuze";
     WebMail.EnableSsl = false;
-    WebMail.Password = "David";
-    WebMail.From = "user@domain.com";
+    WebMail.Password = "Blaatschaap10";
+    WebMail.From = "profielkeuze@csg-comenius.nl";
     /* Commenius Gegevens
         smtp.Host = "ex2013.csg-comenius.nl";
         smtp.Port = 578;
