Miel, raad eens... Laika is weer gaan lopen! Heb jij haar toevallig gezien?

--- a/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
+++ b/ComeniusCarrousel/Decaan/Mail/MailVerzenden.cshtml
@@ -7,7 +7,7 @@
 
 @{
     Layout = "~/_Layout.cshtml";
-    Page.Title = "E-Mail verzenden";
+    Page.Title = "E-Mail wijzigen/verzenden";
 
     if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
     {
@@ -161,34 +161,60 @@
     }
 }
 @Html.ValidationSummary()
+<h2>E-Mail Wijzigen/Verzenden</h2>
 <p><b>Ontvangers:</b></p>
 @foreach (string ontvanger in ontvangers)
 {
     <p>@ontvanger</p>
 }
+<a href="~/Decaan/Mail/OntvangersToevoegen?MailId=@mailId" class="btn btn-success" role="button">
+        <span class="glyphicon glyphicon-plus"></span>&nbsp; Voeg ontvangers toe
+    </a>
+<br>
 <br>
 
 <form method="post">
-    <p>
-        <label for="onderwerp">Onderwerp:</label>
-        <input type="text" name="onderwerp" value="@onderwerp"></input>
-    </p>
-    <p>
-        <label for="inhoud">Inhoud:</label>
-        <textarea style="width: 100%; resize: none; margin-bottom: 16px;" name="inhoud" class="form-control col-md-12" rows="10" maxlength="4000">@inhoud</textarea>
-    </p>
+    <div class="form-group">
+        <label for="onderwerp">Onderwerp</label>
+        <input class="form-control" type="text" name="onderwerp" value="@onderwerp"></input>
+    </div>
+    <div class="form-group">
+        <label for="inhoud">Inhoud</label>
+        <textarea style="width: 100%; resize: none; margin-bottom: 16px;" name="inhoud" class="form-control" rows="10" maxlength="4000">@inhoud</textarea>
+    </div>
 
-    <a href="~/Decaan/Mail/OntvangersToevoegen?MailId=@mailId" class="btn btn-default" role="button">
-        <span class="glyphicon glyphicon-plus"></span>&nbsp; Voeg ontvangers toe
-    </a>
+    <button type="submit" id="submit" name="sendMail" class="btn btn-success" style="float: right; margin-left: 8px; margin-top: 8px;">
+        <span class="glyphicon glyphicon-envelope"></span>&nbsp; Verzenden
+    </button>
+    <button type="submit" id="submit" name="wijzigMail" class="btn btn-default" style="float: right; margin-left: 8px; margin-top: 8px;">
+        <span class="glyphicon glyphicon-pencil"></span>&nbsp; Wijzigingen opslaan
+    </button>
+    
 
-    <button type="submit" id="submit" name="sendMail" class="btn btn-success" style="float: right;">
-        <span class="glyphicon glyphicon-envelope"></span>&nbsp; Verzend
-    </button>
-    <button type="submit" id="submit" name="wijzigMail" class="btn btn-default" style="float: right;">
-        <span class="glyphicon glyphicon-pencil"></span>&nbsp; Wijzig
-    </button>
-    <button type="submit" id="submit" name="deleteMail" class="btn btn-danger" style="float: right;">
-        <span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijder
-    </button>
+
+    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#verwijderWarning" style="float: right; margin-left: 8px; margin-top: 8px;"><span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijder</button>
+
+    <div id="verwijderWarning" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Waarschuwing</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Weet je zeker dat je de E-mail <b>@onderwerp</b> wilt verwijderen?</p>
+                </div>
+                <div class="modal-footer">
+                    <form method="post" class="form-inline">
+                    <button type="submit" id="submit" name="deleteMail" class="btn btn-danger">
+                    <span class="glyphicon glyphicon-remove"></span>&nbsp; Verwijder
+                    </button>      
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Sluiten</button>
+                        </form>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </form>
