--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -14,7 +14,7 @@
 
 @if (User.IsInRole("Admin"))
 {
-    <a class="btn btn-success" href="~/Admin/Leerling/LeerlingenToevoegen">
+    <a class="btn btn-success" href="~/Admin/Leerling/LeerlingenToevoegen" style="margin-bottom: 8px; margin-right: 8px; margin-top: 8px;">
         <span class="glyphicon glyphicon-plus"></span>&nbsp; Leerlingen aanmaken
     </a>
 }
